graph and table added, slight issues with alignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
 .App {
   text-align: center;
-  background-color: antiquewhite;
+  background-color: #EAE7E3;
   height: 100%;
   width: 100vw;
 }
