--- a/src/HomeTable/DataTable.css
+++ b/src/HomeTable/DataTable.css
@@ -1,5 +1,5 @@
 .table {
     display: flex;
     background-color: #fff;
-    border-radius: 20px;
+    border-radius: 30px;
 }
